[package]
name = "canoedaysout-rs"
version = "0.1.0"
authors = ["Rob Day <rkd@rkd.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcgi = "1"
tera = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "3"
mysql = {git= "https://github.com/rkday/rust-mysql-simple.git", branch = "master", default_features = false}
querystring = "1"
native-tls = { version = "0.2", features = ["vendored"]}
flate2 = { version = "*" }
